[package]
name = "tiny_fail"
version = "0.1.1"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

description = "Provides simple Fail type."
license = "MIT OR Apache-2.0"
categories = ["rust-patterns"]
keywords = ["error"]
readme = "README.md"
repository = "https://github.com/IgaguriMK/tiny_fail"
documentation = "https://docs.rs/tiny_fail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
